# CPU-usage-tracker

./: .gitignore  CMakeLists.txt  README.md
inc/: analyzer.h  cpu_data.h  fileread.h  logger.h  mpsc_queue.h  printer.h  queue.h  rb_queue.h  test.h
src/: analyzer.c  fileread.c  logger.c  main.c  mpsc_queue.c  queue.c  rb_queue.c  test.c
tests/: test.txt  test1.c
